whitespaces fixed

--- a/staticfiles/css/Guide.css
+++ b/staticfiles/css/Guide.css
@@ -1,3 +1,9 @@
+html, body{
+    width:100%;
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
+}
 
 *{
     padding:0;
@@ -942,9 +948,11 @@
         padding
     }
 }
-@media only screen and (max-width:500px){
+@media only screen and (max-width:556px){
     .benefits-list{
         text-align:center; 
+        padding-left:15px;
+        padding-right:15px;
     }
 }
 
